include visum nodeId in the link sequence (plus minor cleaning)